--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Dave Jeffery",
   "license": "MIT",
   "dependencies": {
+    "app-module-path": "^1.0.3",
     "commander": "^2.8.1"
   }
 }
